# akprag

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  requirements.txt
accuracy/: accuracy.ipynb  accuracy_plot.py  recall.csv  rel_scores.csv
include/fss/: dcf.h  group.h  prelude.h  prg.h
performance/: akprag.csv  fast_times.py  performance_plot.py  prag.csv
src/: cmp.c  dcf.c  dcf_test.cc  dotprod.c  retrieval.c  utils.h
src/dcf/: dcf.c
src/group/: u64.c
src/prg/: aes128_mmo.c
